--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/code-input": "^4.1.0",
+    "@sanity/scheduled-publishing": "^1.1.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
@@ -22,6 +24,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sanity": "^3.8.3",
+    "sanity-plugin-asset-source-giphy": "^4.0.3",
+    "sanity-plugin-asset-source-openai": "^1.1.2",
+    "sanity-plugin-asset-source-unsplash": "^1.0.6",
+    "sanity-plugin-media": "^2.0.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "vercel": "^28.18.5"
