--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@sanity/code-input": "^4.1.0",
     "@sanity/scheduled-publishing": "^1.1.1",
     "@types/node": "18.15.11",
