--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
-    "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
     "postcss": "8.4.22",
+    "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -34,5 +35,10 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "vercel": "^28.18.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0"
   }
 }
