--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
+    "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-media": "^2.0.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
