--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^8.8.0",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
+    "pnpm": "^8.3.1",
     "postcss": "8.4.22",
     "prettier": "^2.8.7",
     "react": "18.2.0",
