--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^8.8.0",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
+    "pnpm": "^8.3.1",
     "postcss": "8.4.22",
     "prettier": "^2.8.7",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
+    "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-media": "^2.0.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
