--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,14 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "next",
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
+  "extends": ["next", "sanity/react", "sanity/typescript", "prettier"],
+  "plugins": ["simple-import-sort"],
   "rules": {
-    // "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
-    "prefer-const": "error"
+    "simple-import-sort/imports": "warn",
+    "simple-import-sort/exports": "warn",
+    "react-hooks/exhaustive-deps": "error",
+    "no-process-env": "off",
+    "no-warning-comments": "off"
+  },
+  "globals": {
+    "JSX": true
   }
 }
