--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
@@ -31,19 +29,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sanity": "^3.8.3",
+    "sanity": "^3.9.0",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
     "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-media": "^2.0.5",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
     "vercel": "^28.18.5"
   },
   "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.38.0"
+    "eslint": "^8.38.0",
+    "typescript": "5.0.4"
   }
 }
