--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vercel": "^28.18.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
