--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
@@ -36,7 +37,7 @@
     "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-media": "^2.0.5",
     "tailwindcss": "3.3.1",
-    "vercel": "^28.18.5"
+    "vercel": "^28.20.0"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
