--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
