--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
