feat: add embed option in portable text

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
+    "get-video-id": "^3.6.5",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
     "pnpm": "^8.3.1",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-iframe": "^1.8.5",
     "sanity": "^3.9.0",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
