--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
+    "@portabletext/react": "^3.0.0",
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@sanity/vision": "^3.9.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
@@ -25,7 +27,7 @@
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
     "get-video-id": "^3.6.5",
-    "next": "13.3.0",
+    "next": "13.3.4",
     "next-sanity": "^4.1.7",
     "pnpm": "^8.3.1",
     "postcss": "8.4.22",
