--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
+    "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
     "sanity": "^3.9.0",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
