--- a/package.json
+++ b/package.json
@@ -48,12 +48,21 @@
     "vercel": "^28.20.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.38.0",
     "eslint-config-sanity": "^6.0.0",
+    "husky": "^8.0.3",
     "typescript": "5.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
