--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --ignore-path .gitignore",
     "lint:fix": "npm run format && npm run lint -- --fix",
-    "lint:next": "next lint -- --ignore-path .gitignore"
+    "lint:next": "next lint -- --ignore-path .gitignore",
+    "release": "standard-version"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -48,12 +49,22 @@
     "vercel": "^28.20.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.38.0",
     "eslint-config-sanity": "^6.0.0",
+    "husky": "^8.0.3",
+    "standard-version": "^9.5.0",
     "typescript": "5.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
