--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
+    "@vercel/og": "^0.5.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.3.0",
