--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,10 @@
     "simple-import-sort/exports": "warn",
     "react-hooks/exhaustive-deps": "error",
     "no-process-env": "off",
-    "no-warning-comments": "off"
+    "no-warning-comments": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-unused-vars": "warn"
   },
   "globals": {
     "JSX": true
