--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.38.0",
     "eslint-config-sanity": "^6.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "standard-version": "^9.5.0",
     "typescript": "5.0.4"
