--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
     "@sanity/vision": "^3.9.1",
+    "@sentry/nextjs": "^7.51.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
