--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
     "@portabletext/react": "^3.0.0",
+    "@sanity/cli": "^3.10.3",
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
