--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
     "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-media": "^2.0.5",
+    "styled-components": "^5.3.10",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
     "vercel": "^28.20.0"
