--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "sanity": "sanity dev",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "lint:next": "next lint -- --ignore-path .gitignore",
@@ -47,6 +48,7 @@
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
     "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
+    "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.1",
