--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
+    "sanity-plugin-seo-pane": "^2.0.1",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.1",
     "vercel": "^28.20.0"
@@ -67,7 +68,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "standard-version": "^9.5.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vite-plugin-node-polyfills": "^0.8.2"
   },
   "config": {
     "commitizen": {
