--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/code-input": "^4.1.0",
     "@sanity/dashboard": "^3.1.3",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@sanity/ui": "^1.3.3",
     "@sanity/vision": "^3.9.1",
     "@sentry/nextjs": "^7.51.2",
     "@tailwindcss/forms": "^0.5.3",
