chore(dependencies): Upgrade eslint and prettier configurations
- chore: upgraded eslint configuration with new plugins and extensions
- chore: added support for import resolver and jsx
- chore: ignored next.config.js for eslint
- chore: upgraded prettier configuration with new plugins and tailwind configurations to sort styles
- chore: Close T-10804
- chore: Close T-10554
- chore: Link T-10360
- chore: Close T-10557

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,11 @@
 {
-  "extends": ["next", "sanity/react", "sanity/typescript", "prettier"],
+  "extends": [
+    "next",
+    "sanity/react",
+    "sanity/typescript",
+    "prettier",
+    "plugin:import/typescript"
+  ],
   "plugins": ["simple-import-sort"],
   "rules": {
     "simple-import-sort/imports": "warn",
@@ -15,5 +21,22 @@
   "globals": {
     "JSX": true
   },
-  "ignorePatterns": ["*.ndjson"]
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    },
+    "react": {
+      "version": "detect"
+    }
+  },
+  "ignorePatterns": ["next.config.js"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  }
 }
