--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "next-sanity": "^4.1.7",
     "pnpm": "^8.3.1",
     "postcss": "8.4.22",
-    "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -68,6 +67,9 @@
     "eslint-config-sanity": "^6.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "standard-version": "^9.5.0",
     "typescript": "5.0.4",
     "vite-plugin-node-polyfills": "^0.8.2"
