--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,22 +21,5 @@
   "globals": {
     "JSX": true
   },
-  "settings": {
-    "import/resolver": {
-      "typescript": {}
-    },
-    "react": {
-      "version": "detect"
-    }
-  },
-  "ignorePatterns": ["next.config.js"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  }
+  "ignorePatterns": ["*.ndjson"]
 }
