chore: Added doc count to studio
- refactor(deskStructure.ts): update document list titles to include document count and change "Topics" to "Categories"
- chore: add rxjs package for T-9537
- Close T-9537
- chore: removed node-saas recursive dependepency 🤞🏽

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-iframe": "^1.8.5",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
+    "rxjs": "^7.8.1",
     "sanity": "^3.11.1",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
