--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.19.0",
+    "@clerk/themes": "^1.7.4",
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
