--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "ms": "^2.1.3",
     "next": "13.4.2",
     "next-sanity": "^4.3.3",
-    "pnpm": "^8.6.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,6 +43,7 @@
     "react-iframe": "^1.8.5",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
+    "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
