rebekah time-line

--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
     "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-iframe": "^1.8.5",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
+    "react-timeline-animation": "^1.2.3",
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
