--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-iframe": "^1.8.5",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
+    "react-textra": "^0.2.0",
+    "react-wrap-balancer": "^0.5.0",
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
