--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "get-video-id": "^3.6.5",
     "ms": "^2.1.3",
     "next": "13.4.4",
+    "next-plausible": "^3.7.2",
     "next-sanity": "^4.3.3",
     "postcss": "8.4.22",
     "react": "18.2.0",
