--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
