--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@headlessui/react": "^1.7.15",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.1.1",
     "@portabletext/react": "^3.0.2",
     "@sanity/cli": "^3.11.5",
     "@sanity/code-input": "^4.1.1",
     "@sanity/scheduled-publishing": "^1.1.1",
     "@sanity/ui": "^1.3.3",
     "@sanity/vision": "^3.11.5",
+    "@slack/web-api": "^6.8.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
@@ -54,7 +57,8 @@
     "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.1",
-    "vercel": "^28.20.0"
+    "vercel": "^28.20.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
