feat: algolia POC

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.1",
+    "algoliasearch": "^4.17.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -45,12 +46,14 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-iframe": "^1.8.5",
+    "react-instantsearch-hooks-web": "^6.44.3",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
     "react-textra": "^0.2.0",
     "react-wrap-balancer": "^0.5.0",
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
+    "sanity-algolia": "^1.1.0",
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.1.0",
