--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react": "18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.41.0",
     "eslint-config-sanity": "^6.0.0",
