--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
+    "@marsidev/react-turnstile": "^0.2.1",
     "@portabletext/react": "^3.0.2",
     "@sanity/cli": "^3.11.5",
     "@sanity/code-input": "^4.1.1",
