--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/scheduled-publishing": "^1.1.1",
     "@sanity/ui": "^1.3.3",
     "@sanity/vision": "^3.11.5",
+    "@sanity/webhook": "^2.0.0",
     "@slack/web-api": "^6.8.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
