feat: Cornerstone pages section builder Link T-12012

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.1.0",
+    "sanity-plugin-icon-picker": "^3.2.1",
     "sanity-plugin-iframe-pane": "^2.3.1",
     "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.3.11",
