--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
+    "@types/rss": "^0.0.30",
     "@vercel/analytics": "^1.0.1",
     "algoliasearch": "^4.17.2",
     "autoprefixer": "10.4.14",
@@ -53,6 +54,7 @@
     "react-social-media-embed": "^2.3.5",
     "react-textra": "^0.2.0",
     "react-wrap-balancer": "^0.5.0",
+    "rss": "^1.2.2",
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-algolia": "^1.1.0",
