--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@marsidev/react-turnstile": "^0.2.1",
     "@portabletext/react": "^3.0.4",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/cli": "^3.14.1",
     "@sanity/code-input": "^4.1.1",
     "@sanity/scheduled-publishing": "^1.1.1",
@@ -30,6 +31,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-dom": "18.0.11",
+    "@types/rss": "^0.0.30",
     "@vercel/analytics": "^1.0.1",
     "algoliasearch": "^4.18.0",
     "autoprefixer": "10.4.14",
@@ -53,6 +55,7 @@
     "react-social-media-embed": "^2.3.5",
     "react-textra": "^0.2.0",
     "react-wrap-balancer": "^1.0.0",
+    "rss": "^1.2.2",
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-algolia": "^1.1.0",
