Samuelwondimu/t 12340 fix turnstile on signup (#222)
* feat: Signup form refactor and trunstile LInk T-12340

* feat: Add verification on the last form with message Link T-12340

* feat: Add verification on the last form with message Link T-12340

* feat: Reader Prefrences form refactor and trunstile LInk T-12340

* fix: Reader prefrences form Link T-12340

* fix: Prefrence form bugs fixes Link T-12340

* fix: Fix refactor reader prefrence form Link T-12340

* Fix: Reader-prefrences last form verify turnstile Link T-12340

* refactor: Refactor email, formsubmit forms Link T-12340

* refactor: Refactor email, formsubmit forms Link T-12340

* refactor: refrences forms and components Link T-12340

* refactor: prefrences form submit component Link T-12340

* refactor: Prefrences firstName form submit component Link T-12340

* refactor: Prefrences firstName form submit component Link T-12340

* refactor: Signup emailform and confirm form Link T-12340

* refactor: email form Link T-12340

* refactor: iterable form actions Link T-12340

* refactor: react trunstile, reacthook forms Link T-12340

* refactor: metadata Link T-12340

* refactor: metadata Link T-12340

* refactor: email and privacy components Link T-12340

* refactor: duplicate div elements with the same class name Link T-12340

* refactor: iterable api actions Link T-12340

* refactor: context to seprate values Link T-12340

* refator: duplicate email input component Link T-12340

* refactor duplicate email input Link t-12340

* refactor duplicate email input Link t-12340

* refactor: form component checkbox, radio Link T-12340

* refactor: form component checkbox, radio Link T-12340

* refactor: form component checkbox, radio Link T-12340

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
     "react-textra": "^0.2.0",
+    "react-turnstile": "^1.1.1",
     "react-wrap-balancer": "^1.0.0",
     "rss": "^1.2.2",
     "rxjs": "^7.8.1",
