--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sanity/cli": "^3.14.1",
     "@sanity/code-input": "^4.1.1",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@sanity/studio-secrets": "^2.0.2",
     "@sanity/ui": "^1.3.3",
     "@sanity/vision": "^3.11.5",
     "@sanity/webhook": "^2.0.0",
