--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sanity/cli": "^3.14.1",
     "@sanity/code-input": "^4.1.1",
     "@sanity/scheduled-publishing": "^1.1.1",
+    "@sanity/studio-secrets": "^2.0.2",
     "@sanity/ui": "^1.3.3",
     "@sanity/vision": "^3.11.5",
     "@sanity/webhook": "^2.0.0",
@@ -60,7 +61,6 @@
     "rxjs": "^7.8.1",
     "sanity": "^3.11.5",
     "sanity-algolia": "^1.1.0",
-    "sanity-plugin-asset-source-giphy": "^4.0.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-asset-source-unsplash": "^1.1.0",
     "sanity-plugin-iframe-pane": "^2.3.1",
