--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "get-video-id": "^3.6.5",
+    "knip": "^4.2.3",
     "ms": "^2.1.3",
     "next": "14.1.0",
     "next-sanity": "^7.0.17",
@@ -57,7 +58,6 @@
     "react-social-media-embed": "^2.4.1",
     "react-textra": "^0.2.0",
     "react-turnstile": "^1.1.2",
-    "react-wrap-balancer": "^1.1.0",
     "rss": "^1.2.2",
     "rxjs": "^7.8.1",
     "sanity": "^3.26.1",
