--- a/package.json
+++ b/package.json
@@ -10,84 +10,85 @@
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "lint:next": "next lint -- --ignore-path .gitignore",
-    "release": "standard-version"
+    "release": "standard-version",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
-    "@heroicons/react": "^2.0.18",
-    "@hookform/resolvers": "^3.2.0",
-    "@marsidev/react-turnstile": "^0.2.3",
-    "@portabletext/react": "^3.0.4",
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@marsidev/react-turnstile": "^0.5.1",
+    "@portabletext/react": "^3.0.11",
     "@radix-ui/react-tabs": "^1.0.4",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/cli": "^3.15.0",
-    "@sanity/code-input": "^4.1.1",
-    "@sanity/scheduled-publishing": "^1.2.0",
+    "@sanity/cli": "^3.26.1",
+    "@sanity/code-input": "^4.1.2",
+    "@sanity/scheduled-publishing": "^1.2.4",
     "@sanity/studio-secrets": "^2.0.2",
-    "@sanity/ui": "^1.7.4",
-    "@sanity/vision": "^3.15.0",
-    "@sanity/webhook": "^2.0.0",
-    "@slack/web-api": "^6.9.0",
-    "@tailwindcss/forms": "^0.5.4",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/react-dom": "18.2.7",
-    "@types/rss": "^0.0.30",
-    "@vercel/analytics": "^1.0.1",
-    "algoliasearch": "^4.19.1",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "eslint-config-next": "13.4.13",
-    "eslint-config-prettier": "^9.0.0",
+    "@sanity/ui": "^2.0.1",
+    "@sanity/vision": "^3.26.1",
+    "@sanity/webhook": "^4.0.1",
+    "@slack/web-api": "^7.0.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react-dom": "18.2.18",
+    "@types/rss": "^0.0.32",
+    "@vercel/analytics": "^1.1.2",
+    "algoliasearch": "^4.22.1",
+    "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "get-video-id": "^3.6.5",
+    "knip": "^4.2.3",
     "ms": "^2.1.3",
-    "next": "13.4.13",
-    "next-sanity": "^5.2.4",
-    "next-sanity-image": "^6.1.0",
-    "postcss": "8.4.27",
+    "next": "14.1.0",
+    "next-sanity": "^7.0.17",
+    "next-sanity-image": "^6.1.1",
+    "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-fast-marquee": "^1.6.0",
-    "react-hook-form": "^7.45.4",
-    "react-icons": "^4.10.1",
+    "react-fast-marquee": "^1.6.3",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
     "react-iframe": "^1.8.5",
-    "react-instantsearch": "^7.0.1",
-    "react-share": "^4.4.1",
-    "react-social-media-embed": "^2.3.5",
+    "react-instantsearch": "^7.5.3",
+    "react-share": "^5.0.3",
+    "react-social-media-embed": "^2.4.1",
     "react-textra": "^0.2.0",
-    "react-turnstile": "^1.1.1",
-    "react-wrap-balancer": "^1.0.0",
+    "react-turnstile": "^1.1.2",
     "rss": "^1.2.2",
     "rxjs": "^7.8.1",
-    "sanity": "^3.15.0",
+    "sanity": "^3.26.1",
     "sanity-algolia": "^1.1.0",
-    "sanity-plugin-asset-source-unsplash": "^1.1.0",
-    "sanity-plugin-iframe-pane": "^2.5.4",
-    "sanity-plugin-media": "^2.2.2",
-    "styled-components": "^6.0.7",
-    "tailwindcss": "3.3.3",
-    "vercel": "^31.2.3",
-    "zod": "^3.21.4"
+    "sanity-plugin-asset-source-unsplash": "^1.1.2",
+    "sanity-plugin-iframe-pane": "^3.1.3",
+    "sanity-plugin-media": "^2.2.5",
+    "styled-components": "^6.1.8",
+    "tailwindcss": "3.4.1",
+    "vercel": "^33.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.20",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@types/node": "20.11.10",
+    "@types/react": "18.2.48",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.46.0",
-    "eslint-config-sanity": "^6.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-sanity": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "husky": "^9.0.7",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "standard-version": "^9.5.0",
-    "typescript": "5.1.6",
-    "vite-plugin-node-polyfills": "^0.11.0"
+    "typescript": "5.3.3",
+    "vite-plugin-node-polyfills": "^0.19.0"
   },
   "config": {
     "commitizen": {
